--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </h1>
 
       <div class="profile">
-        <img class="avatar" src="images/tanvi profile.png" alt="Profile Image">
+        <img class="avatar" src="tanvi profile.png" alt="Profile Image">
         <h2 class="intro">Hi! I'm Tanvi</h2>
 
         <p class="bio">
@@ -48,12 +48,12 @@
       <h3 class="section-heading">Sneakpeak of my work</h3>
 
       <div class="thumb-grid">
-        <img src="images/party poster.png">
-        <img src="images/photo manipulation poster.png">
-        <img src="images/magazine cover.png">
-        <img src="images/matcha poster.png">
-        <img src="images/cafe coffee day box.png">
-        <img src="images/infographic.png">
+        <img src="party poster.png">
+        <img src="photo manipulation poster.png">
+        <img src="magazine cover.png">
+        <img src="matcha poster.png">
+        <img src="cafe coffee day box.png">
+        <img src="infographic.png">
       </div>
 
       <div class="center-btn">
