--- a/page2.html
+++ b/page2.html
@@ -41,9 +41,9 @@
         <!-- Logos / ideations -->
         <div style="flex:1.2; min-width:240px; border:1px solid rgba(0,0,0,0.08); padding:12px; border-radius:8px; background:#F8CDC0;">
           <div style="display:flex; gap:8px; align-items:center; justify-content:center; flex-wrap:wrap;">
-            <img src="images/goonj yellow logo.png" alt="Goonj initial logo" style="width:120px; height:auto; border-radius:6px; border:1px solid rgba(0,0,0,0.06);" />
-            <img src="images/goonj ideations.png" alt="Goonj logo ideations" style="width:120px; height:auto; border-radius:6px; border:1px solid rgba(0,0,0,0.06);" />
-            <img src="images/Group (1).png" alt="Goonj new logo" style="width:120px; height:auto; border-radius:6px; border:1px solid rgba(0,0,0,0.06);" />
+            <img src="goonj yellow logo.png" alt="Goonj initial logo" style="width:120px; height:auto; border-radius:6px; border:1px solid rgba(0,0,0,0.06);" />
+            <img src="goonj ideations.png" alt="Goonj logo ideations" style="width:120px; height:auto; border-radius:6px; border:1px solid rgba(0,0,0,0.06);" />
+            <img src="Group (1).png" alt="Goonj new logo" style="width:120px; height:auto; border-radius:6px; border:1px solid rgba(0,0,0,0.06);" />
           </div>
           <p style="text-align:center; margin-top:8px; font-size:13px;">Initial logo — Logo ideations — New logo</p>
         </div>
@@ -52,9 +52,9 @@
         <div style="flex-basis:100%; margin-top:12px;">
           <div style="border:1px solid rgba(0,0,0,0.08); padding:12px; border-radius:10px; background:#F3F3F1;">
             <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap;">
-              <img src="images/wrapping paper.png" alt="Goonj pattern" style="width:160px; height:auto; border-radius:6px;" />
-              <img src="images/goonj box.png" alt="Goonj packaging 1" style="width:160px; height:auto; border-radius:6px;" />
-              <img src="images/Fabric Clothe Tag Mockup (4).psd.png" alt="Goonj tag" style="width:160px; height:auto; border-radius:6px;" />
+              <img src="wrapping paper.png" alt="Goonj pattern" style="width:160px; height:auto; border-radius:6px;" />
+              <img src="goonj box.png" alt="Goonj packaging 1" style="width:160px; height:auto; border-radius:6px;" />
+              <img src="Fabric Clothe Tag Mockup (4).psd.png" alt="Goonj tag" style="width:160px; height:auto; border-radius:6px;" />
             </div>
             <p style="text-align:center; margin-top:8px; font-size:13px;">New Packaging</p>
           </div>
@@ -75,9 +75,9 @@
 
         <div style="border:1px solid rgba(0,0,0,0.08); margin-top:14px; padding:14px; border-radius:10px; background:#F3F3F1;">
           <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap;">
-            <img src="images/menu card outside.png" alt="CCD menu left" style="width:220px; height:auto; border-radius:6px;" />
-            <img src="images/cafe coffee day box.png" alt="CCD packaging box" style="width:160px; height:auto; border-radius:6px;" />
-            <img src="images/menu card inside.png" alt="CCD menu right" style="width:220px; height:auto; border-radius:6px;" />
+            <img src="menu card outside.png" alt="CCD menu left" style="width:220px; height:auto; border-radius:6px;" />
+            <img src="cafe coffee day box.png" alt="CCD packaging box" style="width:160px; height:auto; border-radius:6px;" />
+            <img src="menu card inside.png" alt="CCD menu right" style="width:220px; height:auto; border-radius:6px;" />
           </div>
           <p style="text-align:center; margin-top:8px; font-size:13px;">Menu & Box Packaging</p>
         </div>
@@ -97,9 +97,9 @@
 
         <div style="border:1px solid rgba(0,0,0,0.08); margin-top:14px; padding:12px; border-radius:10px; background:#F3F3F1;">
           <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap;">
-            <img src="images/Metamorphosis poster 1.png" alt="Metamorphosis poster 1" style="width:180px; height:auto; border-radius:4px;" />
-            <img src="images/Metamorphosis poster 2.png" alt="Metamorphosis poster 2" style="width:180px; height:auto; border-radius:4px;" />
-            <img src="images/Metamorphosis poster 3.png" alt="Metamorphosis poster 3" style="width:180px; height:auto; border-radius:4px;" />
+            <img src="Metamorphosis poster 1.png" alt="Metamorphosis poster 1" style="width:180px; height:auto; border-radius:4px;" />
+            <img src="Metamorphosis poster 2.png" alt="Metamorphosis poster 2" style="width:180px; height:auto; border-radius:4px;" />
+            <img src="Metamorphosis poster 3.png" alt="Metamorphosis poster 3" style="width:180px; height:auto; border-radius:4px;" />
           </div>
         </div>
       </div>
@@ -112,9 +112,9 @@
       <div style="max-width:760px; margin:12px auto;">
         <div style="border:1px solid rgba(0,0,0,0.08); padding:12px; border-radius:10px; background:#F3F3F1;">
           <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap;">
-            <img src="images/party poster.png" alt="Summer poster" style="width:180px; height:auto; border-radius:4px;" />
-            <img src="images/photo manipulation poster.png" alt="City poster" style="width:180px; height:auto; border-radius:4px;" />
-            <img src="images/matcha poster.png" alt="Matcha poster" style="width:180px; height:auto; border-radius:4px;" />
+            <img src="party poster.png" alt="Summer poster" style="width:180px; height:auto; border-radius:4px;" />
+            <img src="photo manipulation poster.png" alt="City poster" style="width:180px; height:auto; border-radius:4px;" />
+            <img src="matcha poster.png" alt="Matcha poster" style="width:180px; height:auto; border-radius:4px;" />
           </div>
         </div>
       </div>
@@ -125,7 +125,7 @@
       <h3 class="section-heading">Magazine Cover</h3>
 
       <div style="max-width:540px; margin:12px auto; border:1px solid rgba(0,0,0,0.08); padding:18px; border-radius:10px; background:#E6E9E5;">
-        <img src="images/magazine cover.png" alt="Magazine cover" style="display:block; margin:0 auto; width:220px; height:auto; border-radius:4px;" />
+        <img src="magazine cover.png" alt="Magazine cover" style="display:block; margin:0 auto; width:220px; height:auto; border-radius:4px;" />
       </div>
     </section>
 
@@ -134,7 +134,7 @@
       <h3 class="section-heading">Infographics</h3>
 
       <div style="max-width:540px; margin:12px auto; border:1px solid rgba(0,0,0,0.08); padding:18px; border-radius:10px; background:#E6E9E5;">
-        <img src="images/infographic.png" alt="Infographic — Titanic" style="display:block; margin:0 auto; width:180px; height:auto; border-radius:4px;" />
+        <img src="infographic.png" alt="Infographic — Titanic" style="display:block; margin:0 auto; width:180px; height:auto; border-radius:4px;" />
       </div>
     </section>
 
